--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,21 +10,6 @@ networks:
     driver: bridge
 
 services:
-  # jenkins:
-  #   image: jenkins
-  #   build:
-  #     context: ./jenkins
-  #     dockerfile: Dockerfile
-  #   container_name: jenkins
-  #   restart: always
-  #   ports:
-  #     - 8080:8080
-  #     - 50000:50000
-  #   volumes:
-  #     - jenkins:/var/jenkins_home
-  #   networks:
-  #     - cicd
-
   oci:
     image: oci-dashboard
     container_name: oci-dashboard
@@ -32,6 +17,7 @@ services:
       context: ./oci-dashboard
       dockerfile: Dockerfile
     volumes:
+      - ./jenkins:/root/jenkins
       - ~/.zsh_history:/root/.zsh_history
       - ./oci-dashboard/zshrc:/root/.zshrc
       - ./resources:/root/resources
