feat: Add GITHUB_TOKEN to .env.example and improve logging in entrypoint script

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ TF_VAR_tenancy_ocid     =
 TF_VAR_user_ocid        =
 TF_VAR_fingerprint      =
 TF_VAR_private_key_path =
+GITHUB_TOKEN            =
