--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-TF_VAR_region           =
-TF_VAR_tenancy_ocid     =
-TF_VAR_user_ocid        =
-TF_VAR_fingerprint      =
-TF_VAR_private_key_path =
-GITHUB_TOKEN            =
+TF_VAR_region           = the oci region you want to deploy to
+TF_VAR_tenancy_ocid     = your tenancy ocid
+TF_VAR_user_ocid        = your user ocid
+TF_VAR_fingerprint      = your fingerprint
+TF_VAR_private_key_path = your private key path
+GITHUB_TOKEN            = your github token to mirror the repo
