--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,21 @@
+'''
+These are the environment variables you need to set in order to run the terraform scripts.
+You can copy this file to .env and set the values accordingly
+In order to get the values for the variables, you need a OCI account and a github account
+
+OCI variables:
+You can get the values for the OCI variables from the OCI console: 
+Go to "Identity -> My profile -> API keys -> Add API key" then download the private key 
+And press on the three dots of the generated key to get the config file values.
+create a new config file and copy the values then use the same values in the .env file.
+for the private key path, it should be "/root/.oci/oci_api_key.pem" for terraform compatibility
+and then mount the private key and the config file to the container in the docker-compose file
+
+Github token:
+You can get the values for the github token from your github account:
+Go to "Settings -> Developer settings -> Personal access tokens -> Generate new token(classic)" then copy the generated token and use it in the .env file
+'''
+
 TF_VAR_region           = the oci region you want to deploy to
 TF_VAR_tenancy_ocid     = your tenancy ocid
 TF_VAR_user_ocid        = your user ocid
